<?xml version="1.0"?>
<package format="2">
  <name>floam</name>
  <version>0.0.1</version>

  <description>
    This work is created based on some optimization on ALOAM by HKUST and LOAM by CMU
  </description>

  <maintainer email="wh200720041@gmail.com">Han Wang</maintainer>

  <license>BSD</license>
  <url>https://wanghan.pro</url>
  <author email="wh200720041@gmail.com">Han Wang</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>libceres-dev</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>hector_trajectory_server</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
