<?xml version="1.0"?>
<package>
  <name>floam</name>
  <version>0.0.0</version>

  <description>
    This work is created based on some optimization on ALOAM by HKUST and LOAM by CMU
    ROS2 porting by chrissunny94
  </description>

  <maintainer email="wh200720041@gmail.com">Han Wang</maintainer>

  <license>BSD</license>
  <url>https://wanghan.pro</url>
  <author email="wh200720041@gmail.com">Han Wang</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>ros2launch</run_depend>
  <run_depend>pybind11</run_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
